<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout

        android:id="@+id/qrScanResultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/scanner_activity_section_distance"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scannerResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/scanner_activity_button_middle_distance"

            android:gravity="center"
            android:textStyle="bold"
            android:text="资产信息" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/scanner_activity_scan_result_item_to_manually_horizontal_center_delta">


            <!--        1. 资产编码-->
            <RelativeLayout
                android:id="@+id/scanner_result_assets_id_section"
                android:layout_width="@dimen/scanner_activity_scan_result_item_width"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/assets_id_left_wrapper_layout"
                    android:layout_width="@dimen/scanner_activity_scan_result_item_left_fix_text_wrapper_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/scanner_result_assets_id" />
                </LinearLayout>


                <TextView
                    android:id="@+id/scanner_result_assets_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/assets_id_left_wrapper_layout" />
            </RelativeLayout>

            <!--        2.资产名称-->
            <RelativeLayout
                android:id="@+id/scanner_result_assets_name_section"
                android:layout_width="@dimen/scanner_activity_scan_result_item_width"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/assets_name_left_wrapper_layout"
                    android:layout_width="@dimen/scanner_activity_scan_result_item_left_fix_text_wrapper_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/scanner_result_assets_name" />

                </LinearLayout>

                <TextView
                    android:id="@+id/scanner_result_assets_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/assets_name_left_wrapper_layout" />
            </RelativeLayout>

            <!--        3.资产规格-->
            <RelativeLayout
                android:id="@+id/scanner_result_assets_specifications_section"
                android:layout_width="@dimen/scanner_activity_scan_result_item_width"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/assets_spec_left_wrapper_layout"
                    android:layout_width="@dimen/scanner_activity_scan_result_item_left_fix_text_wrapper_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/scanner_result_assets_specifications" />
                </LinearLayout>


                <TextView
                    android:id="@+id/scanner_result_assets_specifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/assets_spec_left_wrapper_layout" />
            </RelativeLayout>

            <!--        4.使用部门-->
            <RelativeLayout
                android:id="@+id/scanner_result_asset_department_section"
                android:layout_width="@dimen/scanner_activity_scan_result_item_width"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/assets_department_left_wrapper_layout"
                    android:layout_width="@dimen/scanner_activity_scan_result_item_left_fix_text_wrapper_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/scanner_result_assets_department" />
                </LinearLayout>


                <TextView
                    android:id="@+id/scanner_result_asset_department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/assets_department_left_wrapper_layout" />
            </RelativeLayout>

            <!--        5.使用人员-->
            <RelativeLayout
                android:id="@+id/scanner_result_assets_person_section"
                android:layout_width="@dimen/scanner_activity_scan_result_item_width"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/assets_person_left_wrapper_layout"
                    android:layout_width="@dimen/scanner_activity_scan_result_item_left_fix_text_wrapper_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/scanner_result_assets_person" />
                </LinearLayout>

                <TextView
                    android:id="@+id/scanner_result_assets_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/assets_person_left_wrapper_layout" />
            </RelativeLayout>

            <!--        6.开始使用时间-->
            <RelativeLayout
                android:id="@+id/scanner_result_assets_begin_date_section"
                android:layout_width="@dimen/scanner_activity_scan_result_item_width"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/assets_begin_date_left_wrapper_layout"
                    android:layout_width="@dimen/scanner_activity_scan_result_item_left_fix_text_wrapper_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scanner_result_assets_begin_date" />
                    <!--                style="@style/scan_result_text_style"-->
                </LinearLayout>

                <TextView
                    android:id="@+id/scanner_result_assets_begin_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/assets_begin_date_left_wrapper_layout" />
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/scanner_activity_section_distance"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/inventoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scanner_activity_submit_button_horizontal_distance"
            android:layout_marginRight="@dimen/scanner_activity_submit_button_horizontal_distance"
            android:layout_weight="1"
            android:background="@color/toolbarBackground"
            android:text="@string/scanner_activity_inventory"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/modifyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scanner_activity_submit_button_horizontal_distance"
            android:layout_marginRight="@dimen/scanner_activity_submit_button_horizontal_distance"
            android:layout_weight="1"
            android:background="@color/toolbarBackground"
            android:text="@string/scanner_activity_modify"
            android:textColor="@color/white"

            />

        <Button
            android:id="@+id/discardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scanner_activity_submit_button_horizontal_distance"
            android:layout_marginRight="@dimen/scanner_activity_submit_button_horizontal_distance"
            android:layout_weight="1"
            android:background="@color/toolbarBackground"
            android:text="@string/scanner_activity_discard"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>